--- a/Tributech.Domain/Tributech.Domain.csproj
+++ b/Tributech.Domain/Tributech.Domain.csproj
@@ -5,8 +5,9 @@
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
   </PropertyGroup>
+  
   <ItemGroup>
-    <PackageReference Include="HamedStack.AggregateRoot" Version="1.0.8" />
-    <PackageReference Include="HamedStack.Result" Version="1.0.13" />
+    <ProjectReference Include="..\HamedStack.AggregateRoot\HamedStack.AggregateRoot.csproj" />
+    <ProjectReference Include="..\HamedStack.Result\HamedStack.Result.csproj" />
   </ItemGroup>
 </Project>
